fix spacing on x buttons

--- a/www/styles.css
+++ b/www/styles.css
@@ -88,7 +88,7 @@ h3 {
     font-size: 7pt;
 }
 
-.file-area button {
+.file-area-prompt button {
     margin-left: 1em;
 }
 
